# hal-info

./: .gitignore  Makefile.am  NEWS  README  VERSION  autogen.sh  configure.in
fdi/: Makefile.am  fdi.dtd
fdi/information/10freedesktop/: 10-dell-rfkill-switch-bluetooth.fdi  10-dell-rfkill-switch-wlan.fdi  10-dell-rfkill-switch-wwan.fdi  10-dell-rfkill-switch.fdi  10-ipw-rfkill-switch.fdi  10-iwl-rfkill-switch.fdi  10-laptop-panel-hardware.fdi  10-modem.fdi  10-recall-battery-dell.fdi  10-recall-battery-fujitsu.fdi  10-recall-battery-gateway.fdi  10-recall-battery-ibm.fdi  10-recall-battery-lenovo.fdi  10-recall-battery-toshiba.fdi  10-scanner.fdi  10-sony-bluetooth-switch.fdi  10-tablet-wacom.fdi  10-thinkpad-rfkill-switch-bluetooth.fdi  10-usb-card-readers.fdi  10-usb-music-players.fdi  10-usb-pda.fdi  10-usbcsr-mice.fdi  20-video-quirk-pm-acer.fdi  20-video-quirk-pm-apple.fdi  20-video-quirk-pm-asus.fdi  20-video-quirk-pm-dell.fdi  20-video-quirk-pm-fujitsu.fdi  20-video-quirk-pm-hp.fdi  20-video-quirk-pm-ibm.fdi  20-video-quirk-pm-lenovo.fdi  20-video-quirk-pm-misc.fdi  20-video-quirk-pm-samsung.fdi  20-video-quirk-pm-sony.fdi  20-video-quirk-pm-toshiba.fdi  21-video-quirk-nvidia.fdi  30-keymap-acer.fdi  30-keymap-compaq.fdi  30-keymap-dell.fdi  30-keymap-hp.fdi  30-keymap-lenovo.fdi  (+7 more)
fdi/information/30user/: Makefile.am
fdi/policy/10osvendor/: Makefile.am
fdi/preprobe/10freedesktop/: 20-broken-usb-sticks.fdi
fdi/preprobe/10osvendor/: 10-ide-drives.fdi  20-broken-usb-sticks.fdi  Makefile.am
tools/: Makefile.am  keymap-check.sh
