AC_PREREQ(2.57)

AC_INIT(hal-info, 20070304, david@fubar.dk)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_LN_S

dnl ---------------------------------------------------------------------------
dnl - Should we ship the recall data
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(recall, [  --enable-recall         include recall data],enable_recall=$enableval,enable_recall=yes)
AM_CONDITIONAL(BUILD_RECALL, test x$enable_recall == xyes)
AC_SUBST(BUILD_RECALL, $enable_recall)

dnl ---------------------------------------------------------------------------
dnl - Should we ship the video suspend data
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(video, [  --enable-video          include video suspend data],enable_video=$enableval,enable_video=yes)
AM_CONDITIONAL(BUILD_VIDEO, test x$enable_video == xyes)
AC_SUBST(BUILD_VIDEO, $enable_video)

dnl ---------------------------------------------------------------------------
dnl - Make paths available for source files
dnl ---------------------------------------------------------------------------
AS_AC_EXPAND(SYSCONFDIR, $sysconfdir)
AS_AC_EXPAND(DATADIR, $datadir)

AC_OUTPUT([
Makefile
fdi/Makefile
fdi/information/Makefile
fdi/information/10freedesktop/Makefile
fdi/information/20thirdparty/Makefile
fdi/information/30user/Makefile
fdi/preprobe/Makefile
fdi/preprobe/10freedesktop/Makefile
fdi/preprobe/20thirdparty/Makefile
fdi/preprobe/30user/Makefile
])

dnl ==========================================================================
echo "
                    hal-info $VERSION
                  ========================

        prefix:                     ${prefix}
        datadir:                    ${DATADIR}
        sysconfdir:                 ${SYSCONFDIR}
        hardware recall data:       ${enable_recall}
        video suspend data:         ${enable_video}
"
