AC_PREREQ(2.57)

AC_INIT(hal-info, esyscmd([tr -d '\n' < VERSION]), hal@lists.freedesktop.org)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_LN_S

dnl ---------------------------------------------------------------------------
dnl - Should we ship the recall data
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(recall, [  --enable-recall         include recall data],enable_recall=$enableval,enable_recall=yes)
AM_CONDITIONAL(BUILD_RECALL, test x$enable_recall == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we ship the video suspend data
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(video, [  --enable-video          include video suspend data],enable_video=$enableval,enable_video=yes)
AM_CONDITIONAL(BUILD_VIDEO, test x$enable_video == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we ship the keymap data (makes random vendor keys work)
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(keymaps, [  --enable-keymaps        include key mapping data],enable_keymaps=$enableval,enable_keymaps=yes)
AM_CONDITIONAL(BUILD_KEYMAPS, test x$enable_keymaps == xyes)

AC_OUTPUT([
Makefile
fdi/Makefile
fdi/information/Makefile
fdi/information/10freedesktop/Makefile
fdi/information/20thirdparty/Makefile
fdi/preprobe/Makefile
fdi/preprobe/10osvendor/Makefile
fdi/preprobe/20thirdparty/Makefile
])

dnl ==========================================================================
echo "
                    hal-info $VERSION
                  ========================

        prefix:                     ${prefix}
        datarootdir:                ${datarootdir:-unused}
        datadir:                    ${datadir}
        sysconfdir:                 ${sysconfdir}
        hardware recall data:       ${enable_recall}
        video suspend data:         ${enable_video}
"
