AC_PREREQ(2.57)

AC_INIT(hal-info, esyscmd([tr -d '\n' < VERSION]), hal@lists.freedesktop.org)
AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_LN_S

dnl ---------------------------------------------------------------------------
dnl - Should we ship the recall data
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(recall, [  --enable-recall         include recall data],enable_recall=$enableval,enable_recall=yes)
AM_CONDITIONAL(BUILD_RECALL, test x$enable_recall == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we ship the video suspend data
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(video, [  --enable-video          include video suspend data],enable_video=$enableval,enable_video=yes)
AM_CONDITIONAL(BUILD_VIDEO, test x$enable_video == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we ship the keymap data (makes random vendor keys work)
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(keymaps, [  --enable-keymaps        include key mapping data],enable_keymaps=$enableval,enable_keymaps=yes)
AM_CONDITIONAL(BUILD_KEYMAPS, test x$enable_keymaps == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we enable WLAN killswitch support for Dell laptops?
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(killswitch_dell_wlan, [  --enable-killswitch-dell-wlan include support for WLAN killswitch],enable_killswitch_dell_wlan=$enableval,enable_killswitch_dell_wlan=yes)
AM_CONDITIONAL(BUILD_KILLSWITCH_DELL_WLAN, test x$enable_killswitch_dell_wlan == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we enable Bluetooth killswitch support for Dell laptops?
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(killswitch_dell_bluetooth, [  --enable-killswitch-dell-bluetooth include support for Bluetooth killswitch],enable_killswitch_dell_bluetooth=$enableval,enable_killswitch_dell_bluetooth=yes)
AM_CONDITIONAL(BUILD_KILLSWITCH_DELL_BLUETOOTH, test x$enable_killswitch_dell_bluetooth == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we enable Bluetooth killswitch support for Sony laptops?
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(killswitch_sony_bluetooth, [  --enable-killswitch-sony-bluetooth include support for Bluetooth killswitch],enable_killswitch_sony_bluetooth=$enableval,enable_killswitch_sony_bluetooth=yes)
AM_CONDITIONAL(BUILD_KILLSWITCH_SONY_BLUETOOTH, test x$enable_killswitch_sony_bluetooth == xyes)

dnl ---------------------------------------------------------------------------
dnl - Should we enable WLAN killswitch support for ipw chipsets?
dnl ---------------------------------------------------------------------------
AC_ARG_ENABLE(killswitch_ipw_wlan, [  --enable-killswitch-ipw-wlan include support for WLAN killswitch],enable_killswitch_ipw_wlan=$enableval,enable_killswitch_ipw_wlan=yes)
AM_CONDITIONAL(BUILD_KILLSWITCH_IPW_WLAN, test x$enable_killswitch_ipw_wlan == xyes)

AC_OUTPUT([
Makefile
fdi/Makefile
fdi/information/Makefile
fdi/information/10freedesktop/Makefile
fdi/information/20thirdparty/Makefile
fdi/preprobe/Makefile
fdi/preprobe/10osvendor/Makefile
fdi/preprobe/20thirdparty/Makefile
])

dnl ==========================================================================
echo "
                    hal-info $VERSION
                  ========================

        prefix:                                 ${prefix}
        datarootdir:                            ${datarootdir:-unused}
        datadir:                                ${datadir}
        sysconfdir:                             ${sysconfdir}
        hardware recall data:                   ${enable_recall}
        video suspend data:                     ${enable_video}
        killswitch support for Dell wlan:       ${enable_killswitch_dell_wlan}
        killswitch support for Dell Bluetooth:  ${enable_killswitch_dell_bluetooth}
        killswitch support for Sony Bluetooth:  ${enable_killswitch_sony_bluetooth}
        killswitch support for IPW wlan:        ${enable_killswitch_ipw_wlan}
"
